Fix doubling stackable grid, text alignment on some elements

--- a/src/definitions/elements/header.less
+++ b/src/definitions/elements/header.less
@@ -144,7 +144,7 @@ h5.ui.header {
 --------------------*/
 
 .ui.icon.header {
-  display: inline-block;
+  display: block;
   text-align: center;
 }
 .ui.icon.header .icon {
@@ -199,56 +199,56 @@ a.ui.black.header:hover {
 }
 
 .ui.blue.header {
-  color: @blueHeaderColor !important;
+  color: @blue !important;
 }
 a.ui.blue.header:hover {
   color: @blueHover !important;
 }
 
 .ui.green.header {
-  color: @greenHeaderColor !important;
+  color: @green !important;
 }
 a.ui.green.header:hover {
   color: @greenHover !important;
 }
 
 .ui.orange.header {
-  color: @orangeHeaderColor !important;
+  color: @orange !important;
 }
 a.ui.orange.header:hover {
   color: @orangeHover !important;
 }
 
 .ui.pink.header {
-  color: @pinkHeaderColor !important;
+  color: @pink !important;
 }
 a.ui.pink.header:hover {
   color: @pinkHover !important;
 }
 
 .ui.purple.header {
-  color: @purpleHeaderColor !important;
+  color: @purple !important;
 }
 a.ui.purple.header:hover {
   color: @purpleHover !important;
 }
 
 .ui.red.header {
-  color: @redHeaderColor !important;
+  color: @red !important;
 }
 a.ui.red.header:hover {
   color: @redHover !important;
 }
 
 .ui.teal.header {
-  color: @tealHeaderColor !important;
+  color: @teal !important;
 }
 a.ui.teal.header:hover {
   color: @tealHover !important;
 }
 
 .ui.yellow.header {
-  color: @yellowHeaderColor !important;
+  color: @yellow !important;
 }
 a.ui.yellow.header:hover {
   color: @yellowHover !important;
