--- a/src/definitions/elements/input.less
+++ b/src/definitions/elements/input.less
@@ -37,6 +37,7 @@
   margin: 0em;
   width: 100%;
   outline: none;
+  text-align: @textAlign;
   line-height: @lineHeight;
 
   font-family: @pageFont;
