--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -31,6 +31,7 @@
   transition: @transition;
   tap-highlight-color: rgba(0, 0, 0, 0);
   outline: none;
+  text-align: left;
 }
 
 
